--- a/styles/globals.css
+++ b/styles/globals.css
@@ -211,7 +211,7 @@ a {
 ***********************************************************/
 
 .meniu-unit{
-  border: 1px solid #f5d5bb;
+  border: 1px solid #e4cdba;
   border-radius: 6px;
   padding: 10px;
   margin-bottom: 20px;
